// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`derived spec counter 1`] = `
<div>
  <div>
    <span>
      0
    </span>
    <button
      type="button"
    >
      +1
    </button>
    <span>
      4
    </span>
  </div>
</div>
`;

exports[`derived spec counter 2`] = `
<div>
  <div>
    <span>
      1
    </span>
    <button
      type="button"
    >
      +1
    </button>
    <span>
      5
    </span>
  </div>
</div>
`;

exports[`derived spec double counter 1`] = `
<div>
  <div>
    <span>
      count: 
      0
    </span>
    <button
      type="button"
    >
      +1
    </button>
  </div>
  <span>
    doubled: 
    0
  </span>
</div>
`;

exports[`derived spec double counter 2`] = `
<div>
  <div>
    <span>
      count: 
      1
    </span>
    <button
      type="button"
    >
      +1
    </button>
  </div>
  <span>
    doubled: 
    2
  </span>
</div>
`;
